--- a/package.json
+++ b/package.json
@@ -23,5 +23,7 @@
     "webpack-dev-server": "^3.10.3",
     "webpack-merge": "^4.2.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "pixi.js": "^5.3.3"
+  }
 }
